Fixed component_portal trash icon vertical align issue. Now the section_record wrapper is displayed as flex instead contents

--- a/core/component_portal/css/component_portal.less
+++ b/core/component_portal/css/component_portal.less
@@ -63,6 +63,13 @@
 			display: none;
 		}
 	}
+
+	&.search {
+		.section_record.list {
+			display: flex;
+			align-items: center;
+		}
+	}
 }//end &.component_portal, &.portal
 
 
